# jdnotes

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/public/: robots.txt  sitemap.xml
docs/src/app/: layout.jsx
docs/src/components/: LandingPage.tsx  landing.css  magic-card.tsx
docs/src/content/: _meta.js  changelog.mdx  index.mdx
scripts/: build-release.ps1
skills/: jdnotes-mcp.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 002_conversations.sql  003_remove_role_check.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  mcp_server.rs
src/components/ai/: AIBubbleMenu.tsx  AIChatSidebar.tsx  AIInlinePrompt.tsx  AIReviewToolbar.tsx  ChatMessageItem.tsx  index.ts
src/components/common/: ErrorBoundary.tsx  ThemeToggleButton.css  ThemeToggleButton.tsx  index.ts
src/components/dashboard/: CategoryPieCard.tsx  ContentAnalysisCard.tsx  HourlyActivityCard.tsx  TagAnalysisCard.tsx  TimeAnalysisCard.tsx  TrendChartCard.tsx  WordDistributionCard.tsx
src/components/editor/: Editor.tsx  EditorHeader.tsx  EditorToolbar.tsx  ResizableImage.tsx  SlashCommand.tsx  TableBubbleMenu.tsx
src/components/layout/: MainContent.tsx  Sidebar.tsx
src/components/modals/: ChangelogModal.tsx  SettingsModal.tsx
src/hooks/: index.ts  useAIStream.ts  useAutoTitle.ts  useChat.ts  useEditorAI.ts  useNotes.ts  useSettings.ts  useSlashCommand.ts
src/lib/: aiTools.ts  db.ts
(+16 files in other folders)
